# dagger-aws-utils

./: .gitignore  README.md  requirements.txt
dagger/: pyproject.toml
dagger/src/dagger_module/common/: aws.py  config.py
dagger/src/dagger_module/container_image/: main.py
infra/: .terraform.lock.hcl  backend.tf  ecr.tf  main.tf
src/with-dockerfile/: Dockerfile  app.py  pyproject.toml
src/with-dockerfile/f_with_dockerfile/: __main__.py
src/without-dockerfile/: .bumpversion.cfg  app.py  pyproject.toml
src/without-dockerfile/f_without_dockerfile/: __main__.py
